--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -23,6 +20,8 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/93632025" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
 	<title>«Райка and Лайка» - интернет-телеканал</title>
 
@@ -39,261 +38,94 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="sheet">
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 	<style>@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');</style>
- <style>
-	 * {
-	 margin: 0;
-	 padding: 0;
-	 box-sizing: border-box;
-	 font-family: 'MS SANS SERIF', sans-serif;
-	 }
 
-	.header {
-	 position: fixed;
-	 top: 20px;
-	 left: 50%;
-	 transform: translateX(-50%);
-	 width: 90%;
-	 max-width: 1200px;
-	 background: rgba(255, 255, 255, 0.95);
-	 border-radius: 30px;
-	 padding: 15px 30px;
-	 display: flex;
-	 justify-content: space-between;
-	 align-items: center;
-	 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-	 backdrop-filter: blur(10px);
-	 z-index: 1000;
-	 }
 
-	.logo-section {
-	 display: flex;
-	 align-items: center;
-	 gap: 15px;
-	 }
+	<style>
+		@font-face {
+		  font-family: 'fontello';
+		  src: url('./font/fontello.eot?89923291');
+		  src: url('./font/fontello.eot?89923291#iefix') format('embedded-opentype'),
+		       url('./font/fontello.woff?89923291') format('woff'),
+		       url('./font/fontello.ttf?89923291') format('truetype'),
+		       url('./font/fontello.svg?89923291#fontello') format('svg');
+		  font-weight: normal;
+		  font-style: normal;
+		}
+		.demo-icon {
+		  font-family: "fontello";
+		  font-style: normal;
+		  font-weight: normal;
+		  speak: never;
+		 
+		  display: inline-block;
+		  text-decoration: inherit;
+		  width: 1em;
+		  margin-right: .2em;
+		  text-align: center;
+		  /* opacity: .8; */
+		 
+		  /* For safety - reset parent styles, that can break glyph codes*/
+		  font-variant: normal;
+		  text-transform: none;
+		 
+		  /* fix buttons height, for twitter bootstrap */
+		  line-height: 1em;
+		 
+		  /* Animation center compensation - margins should be symmetric */
+		  /* remove if not needed */
+		  margin-left: .2em;
+		 
+		  /* You can be more comfortable with increased icons size */
+		  /* font-size: 120%; */
+		 
+		  /* Font smoothing. That was taken from TWBS */
+		  -webkit-font-smoothing: antialiased;
+		  -moz-osx-font-smoothing: grayscale;
+		 
+		  /* Uncomment for 3D effect */
+		  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+		}
+	</style>
 
-	.logo {
-	 width: 50px;
-	 height: 50px;
-	 border-radius: 50%;
-	 background: linear-gradient(45deg, #ff6b6b, #ff8e53);
-	 }
-
-	.channel-name {
-	 font-size: 1.4em;
-	 font-weight: 700;
-	 color: #333;
-	 }
-
-	.nav-links {
-	 display: flex;
-	 gap: 25px;
-	 }
-
-	.nav-link {
-	 text-decoration: none;
-	 color: #444;
-	 font-weight: 500;
-	 padding: 10px 20px;
-	 border-radius: 8px;
-	 transition: all 0.3s ease;
-	 }
-
-	.nav-link:hover {
-	 background: rgba(255, 107, 107, 0.1);
-	 color: #ff6b6b;
-	 }
-
-	/* Мобильная версия */
-	.hamburger {
-	 display: none;
-	 cursor: pointer;
-	 padding: 10px;
-	 }
-
-	.bar {
-	 width: 25px;
-	 height: 3px;
-	 background: #333;
-	 margin: 5px 0;
-	 border-radius: 3px;
-	 transition: 0.4s;
-	 }
-
-	.mobile-menu {
-	 display: none;
-	 position: fixed;
-	 top: 90px;
-	 left: 50%;
-	 transform: translateX(-50%);
-	 width: 90%;
-	 background: rgba(255, 255, 255, 0.98);
-	 border-radius: 20px;
-	 padding: 20px;
-	 box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-	 flex-direction: column;
-	 gap: 15px;
-	 z-index: 999;
-	 }
-
-	.mobile-menu.active {
-	 display: flex;
-	 }
-
-	.overlay {
-	 display: none;
-	 position: fixed;
-	 top: 0;
-	 left: 0;
-	 width: 100%;
-	 height: 100%;
-	 background: rgba(0, 0, 0, 0.3);
-	 z-index: 998;
-	 }
-
-	@media (max-width: 768px) {
-	 .header {
-	 top: 10px;
-	 padding: 12px 20px;
-	 }
-
-	 .nav-links {
-	 display: none;
-	 }
-
-	 .hamburger {
-	 display: block;
-	 }
-
-	 .channel-name {
-	 font-size: 1.2em;
-	 }
-
-	 .logo {
-	 width: 40px;
-	 height: 40px;
-	 }
-
-	 .nav-link {
-	 width: 100%;
-	 text-align: center;
-	 padding: 15px;
-	 }
-	 }
-
-	 @media (max-width: 480px) {
-	 .header {
-	 width: 95%;
-	 border-radius: 25px;
-	 }
-
-	 .channel-name {
-	 display: none;
-	 }
-	 }
- </style>
- <style>
-	@font-face {
-	  font-family: 'fontello';
-	  src: url('./font/fontello.eot?89923291');
-	  src: url('./font/fontello.eot?89923291#iefix') format('embedded-opentype'),
-	       url('./font/fontello.woff?89923291') format('woff'),
-	       url('./font/fontello.ttf?89923291') format('truetype'),
-	       url('./font/fontello.svg?89923291#fontello') format('svg');
-	  font-weight: normal;
-	  font-style: normal;
-	}
-	.demo-icon {
-	  font-family: "fontello";
-	  font-style: normal;
-	  font-weight: normal;
-	  speak: never;
-	 
-	  display: inline-block;
-	  text-decoration: inherit;
-	  width: 1em;
-	  margin-right: .2em;
-	  text-align: center;
-	  /* opacity: .8; */
-	 
-	  /* For safety - reset parent styles, that can break glyph codes*/
-	  font-variant: normal;
-	  text-transform: none;
-	 
-	  /* fix buttons height, for twitter bootstrap */
-	  line-height: 1em;
-	 
-	  /* Animation center compensation - margins should be symmetric */
-	  /* remove if not needed */
-	  margin-left: .2em;
-	 
-	  /* You can be more comfortable with increased icons size */
-	  /* font-size: 120%; */
-	 
-	  /* Font smoothing. That was taken from TWBS */
-	  -webkit-font-smoothing: antialiased;
-	  -moz-osx-font-smoothing: grayscale;
-	 
-	  /* Uncomment for 3D effect */
-	  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-	}
-</style>
 </head>
 <body>
- <header class="header">
- <div class="logo-section">
- <div class="logo"></div>
- <span class="channel-name">Райка & Лайка</span>
- </div>
- 
- <nav class="nav-links">
- <a href="#" class="nav-link">Главная</a>
- <a href="#" class="nav-link">Прямой эфир</a>
- <a href="#" class="nav-link">Телепередачи</a>
- <a href="#" class="nav-link">Стать частью команды</a>
- <a href="#" class="nav-link">Вакансии</a>
- </nav>
+	<div class="container">
+		<div class="buttons">
+			<div class="logoo">
+				<img src="/theme/images/Logoreb.png">
+				<p>Интернет-телеканал «Райка and Лайка»</p>
+			  
+			</div>
+		</div>
+		<div class="dropdown">
+			<a onclick="myFunction()" class="dropbtn">МЕНЮ</a>
+			<div id="myDropdown" class="dropdown-content">
+			<a class="button" href="/"><p>Главная</p></a>
+			<a class="button" href="/livetv"><p>Прямой эфир</p></a>
+			<a class="button" href="/reklama"><p>Реклама</p></a>
+			<a class="button" href="/history"><p>Вакансии</p></a>
+			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<a class="button" href="/tele-video"><p>Телепередачи</p></a>
+			<script>/* Когда пользователь нажимает на кнопку,
+переключение между скрытием и отображением раскрывающегося содержимого */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
 
- <div class="hamburger" onclick="toggleMenu()">
- <div class="bar"></div>
- <div class="bar"></div>
- <div class="bar"></div>
- </div>
- </header>
-
- <div class="overlay" onclick="toggleMenu()"></div>
- <div class="mobile-menu">
- <a href="#" class="nav-link">Главная</a>
- <a href="#" class="nav-link">Прямой эфир</a>
- <a href="#" class="nav-link">Телепередачи</a>
- <a href="#" class="nav-link">Стать частью команды</a>
- <a href="#" class="nav-link">Вакансии</a>
- </div>
-
- <!-- Остальной контент страницы -->
- <script>
- function toggleMenu() {
- const hamburger = document.querySelector('.hamburger');
- const mobileMenu = document.querySelector('.mobile-menu');
- const overlay = document.querySelector('.overlay');
- 
- hamburger.classList.toggle('active');
- mobileMenu.classList.toggle('active');
- overlay.style.display = overlay.style.display === 'block' ? 'none' : 'block';
- 
- // Анимация гамбургера
- if (hamburger.classList.contains('active')) {
- hamburger.children[0].style.transform = 'rotate(-45deg) translate(-5px, 6px)';
- hamburger.children[1].style.opacity = '0';
- hamburger.children[2].style.transform = 'rotate(45deg) translate(-5px, -6px)';
- } else {
- hamburger.children[0].style.transform = 'none';
- hamburger.children[1].style.opacity = '1';
- hamburger.children[2].style.transform = 'none';
- }
- }
- </script>
-</body>
-</div>
+// Закройте выпадающее меню, если пользователь щелкает за его пределами
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}</script>
+			  </div>
 		</div>
  -->
 
@@ -417,3 +249,5 @@
 		</div>
 	</div>
 </html>
+
+
