--- a/index.html
+++ b/index.html
@@ -163,60 +163,55 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 30.08.2025</b> 
-        <p>10:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 12:00:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>13:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 13:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:25:</p>
-        <p>- Семейная связь</p>
-        <p>16:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>18:15:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:40:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>19:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 20:00:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10:</p>
-        <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
-        <p>- К/ф "Беседа"</p>
         <b>Расписание на 31.08.2025</b> 
-        <p>00:45:</p>
+        <p>9:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>00:55:</p>
-        <p>Перерыв вещания</p>
+        <p>9:20:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 9:45:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>11:10:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>11:25:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:05:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 12:30:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>15:00:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>15:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:40:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>18:00:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>18:20:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>18:45:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>19:30:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 19:50:</p>
+        <p>Продолжение вещания</p>
+        <p>20:45:</p>
+        <p>- Дом забытых вещей</p>
+        <p>21:20:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
