--- a/livetv.html
+++ b/livetv.html
@@ -158,56 +158,8 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 31.08.2025</b> 
-        <p>9:02:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:20:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 9:45:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:10:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>11:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>11:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:05:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 12:30:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:00:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:40:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:00:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:20:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>18:45:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>19:30:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 19:50:</p>
-        <p>Продолжение вещания</p>
-        <p>20:45:</p>
-        <p>- Дом забытых вещей</p>
-        <p>21:20:</p>
-        <p>- К/ф "Семейная связь"</p>
-        <!-- <p>10:00:</p>
+        <b>Расписание на 01.09.2025</b> 
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -255,11 +207,11 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-        <b>Расписание на 31.08.2025</b> 
+        <b>Расписание на 02.09.2025</b> 
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p> -->
+        <p>Перерыв вещания</p>
 
    </div>
 </div>
