--- a/index.html
+++ b/index.html
@@ -163,60 +163,81 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 04.09.2025</b> 
-        <p>8:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>8:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 9:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 11:40 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25 МСК:</p>
+        <b>Расписание на 05.09.2025</b> 
+        <p>15:25:</p>
         <p>- Семейная связь</p>
-        <p>14:15 МСК:</p>
+        <p>16:15:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>16:15 МСК:</p>
+        <p>18:15:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>16:40 МСК:</p>
+        <p>18:40:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
+        <p>19:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>17:20 МСК:</p>
+        <p>19:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>17:35 МСК:</p>
+        <p>19:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 18:00 МСК:</p>
+        <p>С 20:00:</p>
         <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
+        <p>22:10:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:50 МСК:</p>
+        <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-        <p>22:36 МСК:</p>
+        <b>Расписание на 06.09.2025</b> 
+        <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30 МСК:</p>
+        <p>00:55:</p>
+        <p>Перерыв вещания</p>
+        <p>9:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 9:20:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>10:45:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:10:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>11:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>11:35:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>12:15:</p>
+        <p>Продолжение вещания</p>
+        <p>12:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45:</p>
+        <p>- Семейная связь</p>
+        <p>17:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>18:30:</p>
+        <p>Продолжение вещания</p>
+        <p>19:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>20:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>20:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>21:50:</p>
+        <p>Там, где горы встречаются с морем <mark>Суббота</mark></p>
+        <p>22:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:15:</p>
         <p>Продолжение вещания</p>
 
 
